--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
-    <title>CANVAS</title>
+    <title>Jeu du pendu</title>
 </head>
 
 <body class="d-flex flex-wrap">
