ajout de navbar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body class="d-flex flex-wrap">
+
+        <nav class="navbar navbar-light bg-danger w-100" >
+                <a class="navbar-brand text-center m-auto text-light" href="#" >
+                 
+                  Jeu du pendu
+                </a>
+              </nav>
     <div class="col-lg-6 col-md-5">
         <canvas id="canvas" width="500" height="600"></canvas>
     </div>
