--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Jeu du pendu</title>
 </head>
 
-<body class="d-flex flex-wrap">
+<body class="d-flex flex-wrap pt-lg-5">
 
         <nav class="navbar navbar-light bg-danger w-100" >
                 <a class="navbar-brand text-center m-auto text-light" href="#" >
@@ -21,10 +21,10 @@
                   Jeu du pendu
                 </a>
               </nav>
-    <div class="col-lg-6 col-md-5">
+    <div class="col-lg-6 col-md-9 ml-auto mr-auto">
         <canvas id="canvas" width="500" height="600"></canvas>
     </div>
-    <div class="container ml-auto col-lg-6 col-md-7 mb-2 mt-5 h-100 text-center">
+    <div class="container ml-auto col-lg-6 col-md-9 ml-auto mr-auto mb-2 mt-5 h-100 text-center">
         <div>
             <p id="text_pendu" class="d-flex w-100 justify-content-center"></p>
             <hr>
